# MMPlayer

chapter1/MMPlayer/: CMakeLists.txt
chapter1/MMPlayer/MMPlayer/: CMakeLists.txt  MMPlayer.cpp
chapter10/MMPlayer/: CMakeLists.txt
chapter10/MMPlayer/MMAV/: MMAVDecoderPrivate.h  MMAVFrame.cpp
chapter10/MMPlayer/MMPlayer/: CMakeLists.txt  MMPlayer.h  MMPlayerReaderThread.cpp
chapter10/MMPlayer/MMPlayerTest/: Main.cpp
chapter10/MMPlayer/MMThread/: MMThread.cpp
chapter11/MMPlayer/MMPlayer/: CMakeLists.txt  MMPlayer.cpp  MMPlayer.h  MMPlayerDecoderThread.cpp  MMPlayerReaderThread.cpp
chapter11/MMPlayer/MMPlayerTest/: Main.cpp
chapter11/MMPlayer/MMQueue/: MMQueue.h
chapter12/MMPlayer/MMAV/: CMakeLists.txt  MMAV.h  MMAVDecoder.cpp  MMAVReader.cpp  MMAVReaderPrivate.h
chapter12/MMPlayer/MMPlayer/: MMPlayer.cpp  MMPlayer.h  MMPlayerCtr.cpp  MMPlayerDecoderThread.cpp  MMPlayerReaderThread.cpp
chapter12/MMPlayer/MMThread/: MMThread.h
chapter13/MMPlayer/MMAV/: MMAVStreamPrivate.h  MMAVTime.cpp
chapter13/MMPlayer/MMPlayer/: CMakeLists.txt  MMPlayerCtr.cpp
chapter13/MMPlayer/MMThread/: CMakeLists.txt
chapter2/MMPlayer/: CMakeLists.txt
chapter2/MMPlayer/MMPlayer/: CMakeLists.txt  MMPlayer.cpp
chapter2/MMPlayer/MMThread/: MMThread.h
chapter3/MMPlayer/: CMakeLists.txt
chapter3/MMPlayer/MMAV/: CMakeLists.txt  MMAV.h  (+2 more)
chapter3/MMPlayer/MMPlayer/: CMakeLists.txt  MMPlayer.cpp  MMPlayer.h
player2_chapter2/MMPlayer/: CMakeLists.txt
player2_chapter2/MMPlayer/MMPlayerTest/: CMakeLists.txt  Main.cpp
player2_chapter2/MMPlayerAndroid/: settings.gradle
(+30 files in other folders)
